# shimmerlang

./: .gitmodules  .replit  4  CMakeCache.txt  LICENSE.txt  Makefile  README.md  STYLE.md  TODO.md  a.out  cmake_install.cmake  core  design.md  dev  dotgrammar.g4  example.dot  example.shmr  lexerbenchmark.shmr  main.sh  main.sh~  ng.shmr  print_options.sh  result.txt  result2.txt  shimmer_style.txt  shmr.vim  stdlib.shmr  style.md  style.shmr  test.shmr  testdump.sh
lib/: headtail.shmr  lib.md
shmr/: blckcmnt.shmr  example.shmr  factorial.shmr  fibonacci.shmr  ng.shmr  rand.shmr  style.shmr  test.shmr
src/: CMakeConfig.h.in  CMakeLists.txt  Dot.h  DotClasses.cpp  DotClasses.h  ShimmerClasses.cpp  ShimmerClasses.h  dotlang.cpp  easteregg.cpp  easteregg.h  errors.cpp  errors.h  eval.cpp  eval.h  ideasforimp.txt  lexer.cpp  lexer.h  lexer_alt.cpp  lexer_alt.h  linenoise.c  linenoise.h  parser.cpp  parser.h  pretty_print.cpp  prompt.cpp  prompt.h  shimmerlang.cpp  src.md  text_effects.h  tree_print.cpp  tree_print.h  utility.cpp  utility.h
src/lib/: fun.shmr  headtail.shmr  lib.md  linkedlist.shmr  loop.shmr  simpleimport.shmr  utils.shmr
